# ByteConverter

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  conanfile.py
src/: CMakeLists.txt
src/include/FSecure/ByteConverter/: ByteArray.h  ByteConverter.h  ByteVector.h  ByteView.h  Utils.h
test/: CMakeLists.txt
test/include/: CustomType.h  Tools.h  pch.h
test/test_case/: ChooseBetterSignature.cpp  CustomTypeSerialization.cpp  PointerTupleConverterSerialization.cpp  QualifiersErasure.cpp  SerializationExceptions.cpp  SimpleTypeSerialization.cpp  TupleConverterSerialization.cpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
